# K-MEANS

./: CMakeLists.txt  README.md  chat_history.md
src/: OkC.cpp  eutest.cpp  eutest1.cpp
